# fs-zero

./: .gitignore  BRUTALIST_DEMO.html  Cargo.toml  DEPLOYMENT_MAINNET.md  DEPLOYMENT_SUCCESS.md  PUNK_DEMO.html  PUNK_REALTIME.html  PUNK_WEBSOCKET.html  README.md  START_LOCAL_DEMO.sh  WEBSOCKET_DEMO.html  WEBSOCKET_FINAL_DEMO.html  WEBSOCKET_INTEGRATION.md  WEBSOCKET_TEST.html  WEBSOCKET_WRITER.html  check_dependencies.sh  codebase.backend.json  codebase.frontend.json  debug_gateway_install.sh  deploy_mainnet.sh  deploy_to_mainnet.sh  dfx-mainnet.json  dfx.json  install_waydroid.sh  install_waydroid_correct.sh  install_waydroid_manual.sh  install_waydroid_simple.sh  juno.config.mjs  juno.json  package-lock.json  test_websocket.sh
data/: key_pair
docs/: DEPLOY_OPTIONS.md  TROUBLESHOOTING_FUN.md
scripts/: console.config.utils.mjs  deploy-frontend.mjs  satellite.auth.mjs  satellite.upgrade.mjs
src/frontend/src/lib/components/: WebSocketBrutalist.tsx
src/frontend/src/lib/services/console/: account.services.ts
src/libs/satellite/: Cargo.toml  satellite.did
src/libs/satellite/src/: juno-websocket.js  lib.rs  types.rs
src/libs/satellite/src/hooks/: db.rs
src/libs/satellite/src/memory/: lifecycle.rs
src/libs/satellite/src/ws/: client.rs  gateway.rs  message.rs  mod.rs
ws_test_demo/: .gitignore  Cargo.toml  FINAL_WORKING_DEMO.html  POLLING_DEMO.html  WEBSOCKET_II.html  WEBSOCKET_II_SIMPLE.html  WS_TEST.html  deploy_local.sh  dfx.json  test_canister.did
ws_test_demo/src/: canister.rs  lib.rs
